--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                         <li class="nav-item"><a class="nav-link" href="mailto:business@sarasaka.com">Contact: business@sarasaka.com</a></li>
                         <li class="nav-item"><a class="nav-link" href="https://twitter.com/sarasakatech" target="_blank"><i class="bi bi-twitter"></i> Twitter</a></li>
                         <li class="nav-item"><a class="nav-link" href="https://linkedin.com/company/sarasaka" target="_blank"><i class="bi bi-linkedin"></i> LinkedIn</a></li>
-                        <li class="nav-item"><a class="nav-link" href="https://facebook.com/sarasaka" target="_blank"><i class="bi bi-facebook"></i> Facebook</a></li>
+                        <li class="nav-item"><a class="nav-link" href="https://facebook.com/sarasakatech" target="_blank"><i class="bi bi-facebook"></i> Facebook</a></li>
                     </ul>
                 </div>
             </div>
@@ -250,3 +250,4 @@
 </body>
 </html>
 ```
+
