--- a/terms.html
+++ b/terms.html
@@ -78,9 +78,9 @@
                     </ul>
                     <ul class="navbar-nav d-lg-none"> <!-- Hamburger extras -->
                         <li class="nav-item"><a class="nav-link" href="mailto:business@sarasaka.com">Contact: Business@sarasaka.com</a></li>
-                        <li class="nav-item"><a class="nav-link" href="https://twitter.com/sarasaka" target="_blank"><i class="bi bi-twitter"></i> Twitter</a></li>
+                        <li class="nav-item"><a class="nav-link" href="https://twitter.com/sarasakatech" target="_blank"><i class="bi bi-twitter"></i> Twitter</a></li>
                         <li class="nav-item"><a class="nav-link" href="https://linkedin.com/company/sarasaka" target="_blank"><i class="bi bi-linkedin"></i> LinkedIn</a></li>
-                        <li class="nav-item"><a class="nav-link" href="https://facebook.com/sarasaka" target="_blank"><i class="bi bi-facebook"></i> Facebook</a></li>
+                        <li class="nav-item"><a class="nav-link" href="https://facebook.com/sarasakatech" target="_blank"><i class="bi bi-facebook"></i> Facebook</a></li>
                     </ul>
                 </div>
             </div>
@@ -293,3 +293,4 @@
 </body>
 
 </html>
+
