--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item"><a class="nav-link" href="Index.html">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
+                        <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
+                        <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
                     </ul>
                     <ul class="navbar-nav d-lg-none"> <!-- Hamburger extras -->
                         <li class="nav-item"><a class="nav-link" href="mailto:business@sarasaka.com">Contact: business@sarasaka.com</a></li>
@@ -123,8 +123,7 @@
                             </picture>
                             <h3 class="cs-h3">Cybersecurity Services</h3>
                             <p class="cs-item-text">
-                                Sarasaka helps protect your business with cybersecurity services designed to reduce exposure, detect threats, and support compliance expectations for organizations in Knoxville, TN.
-                            </p>
+                                Sarasaka can help implement practical security measures to incude multi-factor authentication (MFA) and access controls for your systems.</p>
                             <span class="cs-fake-link">
                                 Get Started
                                 <i class="bi bi-chevron-right cs-icon"></i>
@@ -193,7 +192,7 @@
                     <div class="col-lg-6">
                         <h2 class="display-5 fw-bold">About Sarasaka</h2>
                         <p class="lead">Sarasaka is providing dependable IT services that help organizations operate securely, efficiently, and with confidence.</p>
-                        <p>We specialize in cybersecurity, cloud management, IT consulting, and managed support—delivering clear recommendations, consistent execution, and practical solutions that fit your business. Our approach prioritizes risk reduction, uptime, and long-term alignment between technology and operational goals.</p>
+                        <p>Sarasaka specializes in cybersecurity, cloud management, IT consulting, and managed support—delivering clear recommendations, consistent execution, and practical solutions that fit your business. Our approach prioritizes risk reduction, uptime, and long-term alignment between technology and operational goals.</p>
                         <p>Based in Knoxville, TN, Sarasaka combines local responsiveness with industry-standard best practices to deliver IT strategies that support growth, resilience, and day-to-day performance.</p>
                     </div>
                     <div class="col-lg-6">
