--- a/terms.html
+++ b/terms.html
@@ -73,8 +73,8 @@
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
+                        <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
+                        <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
                     </ul>
                     <ul class="navbar-nav d-lg-none"> <!-- Hamburger extras -->
                         <li class="nav-item"><a class="nav-link" href="mailto:business@sarasaka.com">Contact: Business@sarasaka.com</a></li>
@@ -293,4 +293,5 @@
 </body>
 
 </html>
+
 
