--- a/services.html
+++ b/services.html
@@ -109,7 +109,7 @@
                 <div class="row g-4">
                     <div class="col-md-6 col-lg-3">
                         <div class="card h-100 shadow-sm border-0">
-                            <img src="assets/cybersecurity.jpg" class="card-img-top" alt="Sarasaka Technology Company Security Fundamentals Support in Knoxville, TN | Sarasaka LLC">
+                            <img src="assets/cyber.svg" class="card-img-top" alt="Sarasaka Technology Company Security Fundamentals Support in Knoxville, TN | Sarasaka LLC">
                             <div class="card-body">
                                 <h3 class="card-title">Security Assistance</h3>
                                 <p class="card-text">We help implement practical security measures like multi-factor authentication (MFA) and basic access controls for your systems.</p>
