--- a/services.html
+++ b/services.html
@@ -119,7 +119,7 @@
                     </div>
                     <div class="col-md-6 col-lg-3">
                         <div class="card h-100 shadow-sm border-0">
-                            <img src="assets/cloudcomputing.jpg" class="card-img-top" alt="Sarasaka Technology Company Microsoft 365 Support in Knoxville, TN | Sarasaka LLC">
+                            <img src="assets/office.svg" class="card-img-top" alt="Sarasaka Technology Company Microsoft 365 Support in Knoxville, TN | Sarasaka LLC">
                             <div class="card-body">
                                 <h3 class="card-title">Microsoft 365 Administration</h3>
                                 <p class="card-text">We assist with setting up and managing Microsoft 365 tools, including email, identity, and access management on an on-demand or retainer basis.</p>
