--- a/services.html
+++ b/services.html
@@ -129,7 +129,7 @@
                     </div>
                     <div class="col-md-6 col-lg-3">
                         <div class="card h-100 shadow-sm border-0">
-                            <img src="assets/itconsulting.jpg" class="card-img-top" alt="Sarasaka Technology Company Troubleshooting Support in Knoxville, TN | Sarasaka LLC">
+                            <img src="assets/shoot.svg" class="card-img-top" alt="Sarasaka Technology Company Troubleshooting Support in Knoxville, TN | Sarasaka LLC">
                             <div class="card-body">
                                 <h3 class="card-title">Troubleshooting and Escalation Support</h3>
                                 <p class="card-text">We provide help with diagnosing and resolving technical issues, including endpoint and device support for your team.</p>
