--- a/services.html
+++ b/services.html
@@ -139,7 +139,7 @@
                     </div>
                     <div class="col-md-6 col-lg-3">
                         <div class="card h-100 shadow-sm border-0">
-                            <img src="assets/itsupport.jpg" class="card-img-top" alt="Sarasaka Technology Company Backup Setup Support in Knoxville, TN | Sarasaka LLC">
+                            <img src="assets/support.svg" class="card-img-top" alt="Sarasaka Technology Company Backup Setup Support in Knoxville, TN | Sarasaka LLC">
                             <div class="card-body">
                                 <h3 class="card-title">Backup Setup and Verification</h3>
                                 <p class="card-text">We assist with implementing and checking backup systems to help protect your important data.</p>
