--- a/index.html
+++ b/index.html
@@ -91,7 +91,13 @@
     <main>
         <!-- Hero Section (Full-Span) -->
         <section class="hero mt-5"> <!-- Offset for navbar -->
-           
+            <div class="hero-overlay">
+                <div class="hero-content text-center">
+                    <h1 class="display-3 fw-bold animate-hero-text">Sarasaka<br>Providing IT Services in Knoxville, TN</h1>
+                    <p class="lead animate-hero-text" style="animation-delay: 0.4s;">Sarasaka delivers business-focused IT services for organizations across Knoxville, Tennessee. From cybersecurity and cloud management to IT consulting and managed support, we help reduce risk, improve performance, and keep your technology aligned with your goals.</p>
+                    <a href="#services" class="btn btn-dark btn-lg animate-hero-text" style="animation-delay: 0.8s;">Explore Our Services</a>
+                </div>
+            </div>
         </section>
 
         <!-- Services Section -->
@@ -242,6 +248,7 @@
 </body>
 </html>
 ```
+
 
 
 
